fixed css issues causing padding around everything wrapped with <p> by jekyll

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ hr {
   border-right: solid;
   border-width: thin;
   border-color: rgba(34, 40, 49, 0.25);
-  padding: 0 1.8rem 1rem 1.8rem;
+  
 }
 
 
@@ -99,10 +99,11 @@ hr {
   text-transform: uppercase;
   text-decoration:none;
   text-align: center;
+  margin: 0rem;
   padding: 1rem;
   border-bottom: solid;
-  border-left: solid;
-  border-right: solid;
+  border-left: none;
+  border-right: none;
   border-top: solid;
   border-width: thin;
   border-color: rgba(34, 40, 49, 0.25);
@@ -135,11 +136,6 @@ h4 {
   width: 100%;
   height: auto;
   display: block;
-  border-top: solid;
-  border-left: solid;
-  border-right: solid;
-  border-width: thin;
-  border-color: rgba(34, 40, 49, 0.25);
 }
 
 
@@ -162,6 +158,10 @@ h4 {
   border-top-left-radius: 2px;
 }
 
+#desc {
+  display: block;
+  padding: 0 1.8rem 1rem 1.8rem;
+}
 
 /* FOOTER */
 
